user-auth-k8s/3_user-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-auth-api-service
  namespace: proptuity-dev
spec:
  selector:
    app: user-auth-api
  ports:
    - protocol: TCP
      port: 3000  # Port exposed by the service for cluster access
      targetPort: 3000 # Matches the application's internal listening port eg. APP_PORT=3000 in application
  type: NodePort  # Internal access within the cluster
