user-auth-k8s/4_ingress-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ext
  namespace: proptuity-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-dev-ingress-ext-ip"
    networking.gke.io/managed-certificates: propt-managed-cert
    # SSL Redirect HTTP to HTTPS
    networking.gke.io/v1beta1.FrontendConfig: "propt-frontend-config" 
spec:
  rules:
  - http:
      paths:
      - path: /user-auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-auth-api-service
            port:
              number: 3000



          
# For GKE clusters running versions earlier than 1.21.3-gke.1600, the only supported value for the pathType field is ImplementationSpecific. 
# For clusters running version 1.21.3-gke.1600 or later, Prefix and Exact values are also supported for pathType.
